force-app/main/default/objects/ascend_Note__c/fields/nd_Constituent__c.field-meta.xml
<CustomField>
    <fullName>nd_Constituent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Constituent</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Notes</relationshipLabel>
    <relationshipName>Notes</relationshipName>
    <type>Lookup</type>
</CustomField>