force-app/main/default/objects/ascend_Note__c/fields/nd_Note_Code__c.field-meta.xml
<CustomField>
    <fullName>nd_Note_Code__c</fullName>
    <label>Note Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>B</fullName>
                <label>Bio</label>
            </value>
            <value>
                <fullName>G</fullName>
                <label>Gift</label>
            </value>
            <value>
                <fullName>P</fullName>
                <label>Prospect</label>
            </value>
            <value>
                <fullName>O</fullName>
                <label>Other</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>