force-app/main/default/objects/ascend_Note__c/fields/nd_Note_Date__c.field-meta.xml
<CustomField>
    <fullName>nd_Note_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Note Date</label>
    <type>Date</type>
</CustomField>