force-app/main/default/objects/ascend_Note__c/fields/nd_Note_Type__c.field-meta.xml
<CustomField>
    <fullName>nd_Note_Type__c</fullName>
    <label>Note Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>BI</fullName>
                <label>Biographical Note</label>
            </value>
            <value>
                <fullName>MS</fullName>
                <label>Children&apos;s High School</label>
            </value>
            <value>
                <fullName>DN</fullName>
                <label>Death Notice/Obituary</label>
            </value>
            <value>
                <fullName>ZH</fullName>
                <label>Engagement/Action to take in FY21</label>
            </value>
            <value>
                <fullName>EC</fullName>
                <label>Entity Couple Photo</label>
            </value>
            <value>
                <fullName>EP</fullName>
                <label>Entity Individual Photo</label>
            </value>
            <value>
                <fullName>BB</fullName>
                <label>Gift Planning Document</label>
            </value>
            <value>
                <fullName>ZC</fullName>
                <label>Influencers / Collaborators to involve</label>
            </value>
            <value>
                <fullName>MN</fullName>
                <label>Name Pronunciation</label>
            </value>
            <value>
                <fullName>OT</fullName>
                <label>Other Note</label>
            </value>
            <value>
                <fullName>ZD</fullName>
                <label>Personal Milestones to influence timing</label>
            </value>
            <value>
                <fullName>ZA</fullName>
                <label>Philanthropic Areas of Interest</label>
            </value>
            <value>
                <fullName>MP</fullName>
                <label>Preferences</label>
            </value>
            <value>
                <fullName>R6</fullName>
                <label>Research Biographical Profile Report</label>
            </value>
            <value>
                <fullName>R3</fullName>
                <label>Research Biographic Profile</label>
            </value>
            <value>
                <fullName>R4</fullName>
                <label>Research Capacity Profile</label>
            </value>
            <value>
                <fullName>R5</fullName>
                <label>Research Comprehensive Profile</label>
            </value>
            <value>
                <fullName>R1</fullName>
                <label>Research Entity Announcement</label>
            </value>
            <value>
                <fullName>RS</fullName>
                <label>Research Note</label>
            </value>
            <value>
                <fullName>R2</fullName>
                <label>Research Pre-Qualification</label>
            </value>
            <value>
                <fullName>AA</fullName>
                <label>WARNING</label>
            </value>
            <value>
                <fullName>WX</fullName>
                <label>WealthEx</label>
            </value>
            <value>
                <fullName>WS</fullName>
                <label>Wealth Screening</label>
            </value>
            <value>
                <fullName>ZE</fullName>
                <label>What are the immediate next steps?</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>