force-app/main/default/objects/ascend_Note__c/recordTypes/Constituent_Notes.recordType-meta.xml
<RecordType>
    <fullName>Constituent_Notes</fullName>
    <active>true</active>
    <label>Constituent Notes</label>
</RecordType>