force-app/main/default/objects/ascend_Note__c/recordTypes/Organization_Notes.recordType-meta.xml
<RecordType>
    <fullName>Organization_Notes</fullName>
    <active>true</active>
    <label>Organization Notes</label>
</RecordType>